data/src/test/resources/com/linkedin/data/schema/annotation/denormalizedsource/invalid/3_4_cyclic_cross_ref_invalid.pdl
namespace com.linkedin.data.schema.annotation.denormalizedsource.invalid

record Test {
  a: record A {
    @customAnnotation = {
      "/b2" : "test for b"
    }
    a1: record B {
      @customAnnotation = {
        "/a2" : "test for a"
      }
      b1: A
      b2: string
    }
    a2: string
  }
}